--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "conFusion",
   "private": true,
   "devDependencies": {
-    "grunt": "^1.0.1"
+    "grunt": "^1.0.1",
+    "grunt-contrib-jshint": "^1.0.0",
+    "install": "^0.8.1",
+    "jit-grunt": "^0.10.0",
+    "jshint-stylish": "^2.2.1",
+    "npm": "^3.10.6",
+    "time-grunt": "^1.4.0"
   },
   "engines": {
     "node": ">=0.10.0"
