--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "angular": "~1.4.7",
     "angular-route": "^1.5.8",
     "angular-ui-router": "^0.3.1",
-    "angular-resource": "^1.5.8"
+    "angular-resource": "^1.5.8",
+    "angular-mocks": "^1.5.8"
   },
   "resolutions": {
     "angular": "^1.0.8"
